Since 2.2.24 reading a CRL fails on Windows if the CRL is new. The cause for this is that we now use DeleteFileW instead of remove. However ERRNO is not set and the CRL code in dirmngr only ignores ENOENT error when deleting a cached CRL.
Description
Description
Revisions and Commits
Revisions and Commits
| rG GnuPG | |||
| rG3901c1a8c59a gpg,w32: Fix gnupg_remove. | |||
| rGb6967d319129 gpg,w32: Fix gnupg_remove. | |||
Related Objects
Related Objects
- Mentioned In
- T5234: Release GnuPG 2.2.27